--- a/eudevfin/saikuui/pom.xml
+++ b/eudevfin/saikuui/pom.xml
@@ -5,8 +5,10 @@
         <version>0.9.8-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>saikuui</artifactId>
+	<groupId>org.saiku</groupId>
+	<artifactId>saiku-ui</artifactId>
     <packaging>war</packaging>
+	<version>2.6-SNAPSHOT</version>
 
     <name>EU-DEVFIN Saiku UI</name>
     
