ODAEU-21 Integrate Saiku Reporting - fixed some pom stuff

--- a/eudevfin/saiku-webapp/.project
+++ b/eudevfin/saiku-webapp/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>saiku-webapp</name>
+	<name>eudevfin-saiku-webapp</name>
 	<comment></comment>
 	<projects>
 	</projects>
