--- a/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
+++ b/eudevfin/dim/src/main/webapp/WEB-INF/web.xml
@@ -120,7 +120,10 @@
 	</listener>
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/applicationContext.xml			classpath*:META-INF/*Context.xml</param-value>
+		<param-value>
+            /WEB-INF/applicationContext.xml
+            classpath*:META-INF/*Context.xml
+        </param-value>
 	</context-param>
 	<session-config>
 		<session-timeout>60</session-timeout>
