Resolved the problem with Bilateral ODA total, net in AQ. (ODAEU-222)

--- a/eudevfin/saiku-webapp/src/main/webapp/WEB-INF/classes/mondrian.properties
+++ b/eudevfin/saiku-webapp/src/main/webapp/WEB-INF/classes/mondrian.properties
@@ -12,7 +12,7 @@ mondrian.result.limit=5000000
 mondrian.rolap.queryTimeout=7200
 
 # String property that holds the name of the class whose resource bundle is to be used to for this schema
-mondrian.rolap.localePropFile=org.devgateway.eudevfin.cda.service.MondrianMessages
+mondrian.rolap.localePropFile=org.devgateway.eudevfin.reports.core.service.MondrianMessages
 
 # Property which controls the amount of tracing displayed.  Seperate from log4j.
 mondrian.trace.level=1
