--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<!--
+  ~ Copyright (c) 2014 Development Gateway.
+  ~ All rights reserved. This program and the accompanying materials
+  ~ are made available under the terms of the GNU Public License v3.0
+  ~ which accompanies this distribution, and is available at
+  ~ http://www.gnu.org/licenses/gpl.html
+  -->
+
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>eudevfin</artifactId>
@@ -29,21 +38,7 @@
     </properties>
 
 
-
     <dependencies>
-
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>${jasper.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.lowagie</groupId>
-			<artifactId>itext</artifactId>
-			<version>${itext.version}</version>
-		</dependency>
-
 
 
         <dependency>
@@ -72,19 +67,19 @@
             <artifactId>derby</artifactId>
             <version>${derby.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbynet</artifactId>
             <version>${derby.version}</version>
         </dependency>
 
-	<dependency>
-		<groupId>org.jminix</groupId>
-		<artifactId>jminix</artifactId>
-		<version>${jminix.version}</version>
-	</dependency>              
-        
+        <dependency>
+            <groupId>org.jminix</groupId>
+            <artifactId>jminix</artifactId>
+            <version>${jminix.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
@@ -137,13 +132,13 @@
             <artifactId>wicket-spring</artifactId>
             <version>${wicket.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-jmx</artifactId>
             <version>${wicket.version}</version>
-        </dependency>               
-        
+        </dependency>
+
         <dependency>
             <groupId>org.apache.wicket</groupId>
             <artifactId>wicket-ioc</artifactId>
@@ -180,17 +175,17 @@
             <version>${spring.security.version}</version>
         </dependency>
         <dependency>
-        	<groupId>org.apache.tomcat</groupId>
-        	<artifactId>tomcat-jdbc</artifactId>
-        	<version>7.0.47</version>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-jdbc</artifactId>
+            <version>7.0.47</version>
         </dependency>
 
-	<dependency>
-		<groupId>org.zeroturnaround</groupId>
-		<artifactId>zt-zip</artifactId>
-		<version>1.7</version>
-		<type>jar</type>
-	</dependency>
+        <dependency>
+            <groupId>org.zeroturnaround</groupId>
+            <artifactId>zt-zip</artifactId>
+            <version>1.7</version>
+            <type>jar</type>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -218,7 +213,7 @@
             <artifactId>spring-integration-jmx</artifactId>
             <version>${spring.integration.version}</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-aspects</artifactId>
@@ -236,21 +231,21 @@
         </dependency>
 
         <dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time-hibernate</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.joda</groupId>
-			<artifactId>joda-money</artifactId>
-			<version>0.9-exchangerate</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jadira.usertype</groupId>
-			<artifactId>usertype.core</artifactId>
-			<version>3.0.0.GA</version>
-		</dependency>
-		            
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time-hibernate</artifactId>
+            <version>1.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.joda</groupId>
+            <artifactId>joda-money</artifactId>
+            <version>0.9-exchangerate</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.0.0.GA</version>
+        </dependency>
+
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjtools</artifactId>
@@ -302,12 +297,12 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-util</artifactId>
             <version>${jetty.version}</version>
-        </dependency>    
-        
+        </dependency>
+
         <dependency>
-        	<groupId>commons-codec</groupId>
-        	<artifactId>commons-codec</artifactId>
-        	<version>1.8</version>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.8</version>
         </dependency>
 
         <dependency>
@@ -328,27 +323,26 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.7.4</version>
         </dependency>
-        
+
         <dependency>
-        	<groupId>org.apache.commons</groupId>
-        	<artifactId>commons-collections4</artifactId>
-        	<version>4.0</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.0</version>
         </dependency>
-<!-- 
+        <!--
+                <dependency>
+                    <groupId>org.jboss.resteasy</groupId>
+                    <artifactId>jaxrs-api</artifactId>
+                    <version>3.0.5.Final</version>
+                </dependency>
+         -->
         <dependency>
-        	<groupId>org.jboss.resteasy</groupId>
-        	<artifactId>jaxrs-api</artifactId>
-        	<version>3.0.5.Final</version>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.11.0</version>
         </dependency>
- -->
-        <dependency>
-        	<groupId>xerces</groupId>
-        	<artifactId>xercesImpl</artifactId>
-        	<version>2.11.0</version>
-        </dependency>
-        
-	      
-	            
+
+
     </dependencies>
 
     <build>
@@ -359,7 +353,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.4</version>
-                
+
             </plugin>
 
 
@@ -419,7 +413,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore />
+                                        <ignore/>
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
@@ -493,9 +487,9 @@
                 <version>${spring.framework.version}</version>
             </dependency>
             <dependency>
-            	<groupId>net.sf.ehcache</groupId>
-            	<artifactId>ehcache-core</artifactId>
-            	<version>${ehcache.version}</version>
+                <groupId>net.sf.ehcache</groupId>
+                <artifactId>ehcache-core</artifactId>
+                <version>${ehcache.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -511,13 +505,13 @@
         <module>exchange</module>
         <module>common-exchange</module>
         <module>common</module>
-		<module>saiku-webapp</module>
-		<module>saikuui</module>
-		<module>common-ui</module>
-    	<module>import-metadata</module>
-    	<module>mcm</module>
-    	<module>spreadsheet-exporter</module>
-    	<module>common-metadata</module>
+        <module>saiku-webapp</module>
+        <module>saikuui</module>
+        <module>common-ui</module>
+        <module>import-metadata</module>
+        <module>mcm</module>
+        <module>spreadsheet-exporter</module>
+        <module>common-metadata</module>
     </modules>
     <inceptionYear>2013</inceptionYear>
     <organization>
@@ -532,12 +526,15 @@
         <system>Jenkins</system>
         <url>https://ci.ampdev.net</url>
     </ciManagement>
-    
-   	<scm>
-		<url>ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</url>
-		<developerConnection>scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</developerConnection>
-		<connection>scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</connection>
-		<tag>HEAD</tag>
-	</scm>
-    
+
+    <scm>
+        <url>ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git</url>
+        <developerConnection>
+            scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git
+        </developerConnection>
+        <connection>scm:git:ssh://mpostelnicu@git.developmentgateway.org:20006/home/mpostelnicu/projects/eudevfin.git
+        </connection>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
