--- a/eudevfin/reports-core/pom.xml
+++ b/eudevfin/reports-core/pom.xml
@@ -320,7 +320,7 @@
                     </dependency>
                     <dependency>
                         <groupId>javax.servlet</groupId>
-                        <artifactId>javax.servlet-api</artifactId>
+                        <artifactId>servlet-api</artifactId>
                         <version>${servlet.api.version}</version>
                     </dependency>
                     <dependency>
