ODAEU-24 Clean up of code. Update DAC2a report. Updating DAC1 report. Deleting unused files.

--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/i18n.properties
@@ -1,4 +1,5 @@
-dac1.title=TABLE DAC 1 DISBURSEMENTS AND COMMITMENTS <br/> OF OFFICIAL AND PRIVATE FLOWS
+dac1.title=TABLE DAC 1
+dac1.subtitle=DISBURSEMENTS AND COMMITMENTS OF OFFICIAL AND PRIVATE FLOWS
 dac2a.title=TABLE DAC 2A<br/> DESTINATION OF OFFICIAL DEVELOPMENT ASSISTANCE - DISBURSEMENTS
 aq.title=ADVANCE QUESTIONNAIRE ON MAIN ODA AGGREGATES
 aq.subtitle=Edition
