--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -24,7 +24,7 @@
         <wicket.version>6.12.0</wicket.version>
         <hibernate.core.version>4.2.8.Final</hibernate.core.version>
         <spring.security.version>3.2.2.RELEASE</spring.security.version>
-        <servlet.api.version>2.5</servlet.api.version>
+        <servlet.api.version>3.0.1</servlet.api.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <wicket.bootstrap>0.8.5</wicket.bootstrap>
         <derby.version>10.10.2.0</derby.version>
@@ -155,7 +155,7 @@
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
+            <artifactId>javax.servlet-api</artifactId>
             <version>${servlet.api.version}</version>
         </dependency>
         <dependency>
