--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
@@ -1,30 +1,61 @@
-allExtendingAgencies=All Extending Agencies EN
-extendingAgencies=Extending Agencies EN
-allTypesOfAid=All Types of Aid EN
-typesOfAid=Types of Aid EN
-allTypesOfFlow=All Types of Flow EN
-typesOfFlow=Types of Flow EN
-sectors=Sectors EN
-allSectors=All Sectors EN
-allBiMultilateral=Bi-Multilateral EN
-biMultilateral=Bi-Multilateral EN
-allTypesOfFinance=All Types of Finance
-typesOfFinance=Types of Finance
-exportCreditAmount=Export Credit Amount EN
-IRTCAmount=IRTC Amount EN
-extendedAmount=Extended Amount EN
-currentExtendedAmount=Current Extended Amount EN
-year1ExtendedAmount=Year 1 Extended Amount EN
-year2ExtendedAmount=Year 2 Extended Amount EN
-partiallyUntiedAmount=Partially Untied Amount EN
-receivedAmount=Received Amount EN
-tiedAmount=Tied Amount  EN
-untiedAmount=Untied Amount EN
-interestArrearsAmount=Interest Arrears Amount EN
-principalArrearsAmount=Principal Arrears Amount EN
-commitmentsAmount=Commitments Amount EN
-interestReceivedAmount=Interest Received Amount EN
-principalDisbursedAmount=Principal Disbursed Amount EN
-expertCommitmentsAmount=Expert Commitments Amount EN
-expertExtendedAmount=Expert Extended Amount EN
-
+areaDimension=Area
+areaCode=Code
+countryDimension=Country
+geography=Geography
+countryName=Name
+incomeGroupDimension=Income Group
+incomeGroupName=Name
+extendingAgencyDimension=Extending Agency
+extendingAgencyCode=Code
+extendingAgencyAcronym=Acronym
+extendingAgencyName=Name
+channelDimension=Channel of Delivery
+channelCode=Code
+channelName=Name
+typeOfAidDimension=Type of Aid
+typeOfAidCode=Code
+typeOfAidName=Name
+typeOfFlowDimension=Type of Flow
+typeOfFlowCode=Code
+typeOfFlowName=Name
+typeOfFinanceDimension=Type of Finance
+typeOfFinanceCode=Code
+typeOfFinanceName=Name
+sectorDimension=Purpose Code
+sectorCode=Code
+sectorName=Name
+biMultilateralDimension=Bi/Multilateral
+biMultilateralCode=Code
+biMultilateralName=Name
+txTitleDimension=Project Information
+txTitleId=ID
+txTitleTitle=Title
+reportingYearDimension=Reporting Year
+reportingYear=Year
+formTypeDimension=Transaction Type
+formTypeName=Name
+investmentDimension=Investment
+investmentName=Yes/No
+PBADimension=Programme Based Approach
+PBAName=Yes/No
+FTCDimension=Free Standing Technical Cooperation
+FTCName=Yes/No
+CPADimension=CPA
+CPAName=Yes/No
+coFinancedDimension=Co-Financed
+coFinancedName=Yes/No
+extendedAmount=Extended
+extendedAmountCurrencyNatlOecd=Extended
+receivedAmount=Received
+receivedAmountCurrencyNatlOecd=Received
+commitmentsAmount=Commitments
+commitmentsAmountCurrencyNatlOecd=Commitments
+interestReceivedAmount=Interest
+interestReceivedAmountCurrencyNatlOecd=Interest
+expertCommitmentsAmount=Expert Commitments
+expertCommitmentsAmountCurrencyNatlOecd=Expert Commitments
+expertExtendedAmount=Expert Extended
+expertExtendedAmountCurrencyNatlOecd=Expert Extended
+netAmountCurrencyNatlOecd=Net Amounts
+numberOfTransactions=Number of Transactions
+allMember=All
