ODAEU-267 Updated names for the dimensions/measures for Saiku

--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
@@ -58,4 +58,14 @@ expertExtendedAmount=Expert Extended
 expertExtendedAmountCurrencyNatlOecd=Expert Extended
 netAmountCurrencyNatlOecd=Net Amounts
 numberOfTransactions=Number of Transactions
+exportCreditAmount=Export Credit Amount
+currentExtendedAmount=Current Extended Amount
+year1ExtendedAmount=Year 1 Extended Amount
+year2ExtendedAmount=Year 2 Extended Amount
+partiallyUntiedAmount=Partially Untied Amount
+tiedAmount=Tied Amount
+untiedAmount=Untied Amount
+interestArrearsAmount=Interest Arrears Amount
+principalArrearsAmount=Principal Arrears Amount
+principalDisbursedAmount=Principal Disbursed Amount
 allMember=All
