ODAEU-290 Initial round of improvements for integration

--- a/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
+++ b/eudevfin/reports-core/src/main/resources/org/devgateway/eudevfin/reports/core/service/MondrianMessages.properties
@@ -2,48 +2,48 @@ areaDimension=Area
 areaCode=Code
 countryDimension=Country
 geography=Geography
-countryName=Name
+countryName=Country Name
 incomeGroupDimension=Income Group
-incomeGroupName=Name
+incomeGroupName=Income Group Name
 extendingAgencyDimension=Extending Agency
 extendingAgencyCode=Code
-extendingAgencyAcronym=Acronym
-extendingAgencyName=Name
+extendingAgencyAcronym=Extending Agency Acronym
+extendingAgencyName=Extending Agency Name
 channelDimension=Channel of Delivery
-channelCode=Code
-channelName=Name
+channelCode=Channel of Delivery Code
+channelName=Channel of Delivery Name
 typeOfAidDimension=Type of Aid
-typeOfAidCode=Code
-typeOfAidName=Name
+typeOfAidCode=Type of Aid Code
+typeOfAidName=Type of Aid Name
 typeOfFlowDimension=Type of Flow
-typeOfFlowCode=Code
-typeOfFlowName=Name
+typeOfFlowCode=Type of Flow Code
+typeOfFlowName=Type of Flow Name
 typeOfFinanceDimension=Type of Finance
-typeOfFinanceCode=Code
-typeOfFinanceName=Name
+typeOfFinanceCode=Type of Finance Code
+typeOfFinanceName=Type of Finance Name
 sectorDimension=Purpose Code
-sectorCode=Code
-sectorName=Name
+sectorCode=Purpose Code
+sectorName=Purpose Code
 biMultilateralDimension=Bi/Multilateral
 biMultilateralCode=Code
-biMultilateralName=Name
+biMultilateralName=Bi/Multilateral
 txTitleDimension=Project Information
 txTitleId=ID
 txTitleTitle=Title
 reportingYearDimension=Reporting Year
-reportingYear=Year
+reportingYear=Reporting Year
 formTypeDimension=Transaction Type
-formTypeName=Name
+formTypeName=Transaction Type
 investmentDimension=Investment
-investmentName=Yes/No
+investmentName=Investment Yes/No
 PBADimension=Programme Based Approach
-PBAName=Yes/No
+PBAName=PBA Yes/No
 FTCDimension=Free Standing Technical Cooperation
-FTCName=Yes/No
+FTCName=FSTC Yes/No
 CPADimension=CPA
-CPAName=Yes/No
+CPAName=CPA Yes/No
 coFinancedDimension=Co-Financed
-coFinancedName=Yes/No
+coFinancedName=Co-Financed Yes/No
 extendedAmount=Extended
 extendedAmountCurrencyNatlOecd=Extended
 receivedAmount=Received
@@ -69,3 +69,9 @@ interestArrearsAmount=Interest Arrears Amount
 principalArrearsAmount=Principal Arrears Amount
 principalDisbursedAmount=Principal Disbursed Amount
 allMember=All
+budgetMTEFDisbCurrentYear=Budget/MTEF Disb Current Year
+budgetMTEFDisbYear1=Budget/MTEF Disb Current Year+1
+budgetMTEFDisbYear2=Budget/MTEF Disb Current Year+2
+budgetMTEFDisbYear3=Budget/MTEF Disb Current Year+3
+budgetMTEFDisbYear4=Budget/MTEF Disb Current Year+4
+
