ODAEU-290 Third round of improvements for integration

--- a/eudevfin/reports-core/src/main/resources/mondrian.properties
+++ b/eudevfin/reports-core/src/main/resources/mondrian.properties
@@ -131,3 +131,4 @@ mondrian.olap.fun.crossjoin.optimizer.size=0
 mondrian.rolap.maxQueryThreads=20
 mondrian.rolap.maxCacheThreads=20
 mondrian.rolap.maxSqlThreads=20
+mondrian.olap.NullMemberRepresentation=Unspecified
