--- a/deployer/pom.xml
+++ b/deployer/pom.xml
@@ -35,8 +35,7 @@
 									<version>${eudevfin.version}</version>
 									<type>war</type>
 									<overWrite>true</overWrite>
-									<outputDirectory>${project.build.directory}/war
-									</outputDirectory>
+									<outputDirectory>/var/lib/tomcat7/webapps/ROOT/</outputDirectory>
 								</artifactItem>
 							</artifactItems>
 							<includes>**/*</includes>
@@ -44,6 +43,34 @@
 					</execution>
 				</executions>
 			</plugin>
+
+
+	<plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-dependency-plugin</artifactId>
+		<version>2.8</version>
+		<executions>
+			<execution>
+				<id>copy-installed</id>
+				<phase>install</phase>
+				<goals>
+					<goal>copy</goal>
+				</goals>
+				<configuration>
+					<artifactItems>
+						<artifactItem>
+							<groupId>org.devgateway.eudevfin</groupId>
+							<artifactId>dim</artifactId>
+							<version>${eudevfin.version}</version>
+							<type>war</type>
+						</artifactItem>
+					</artifactItems>
+					<outputDirectory>some-other-place</outputDirectory>
+				</configuration>
+			</execution>
+		</executions>
+	</plugin>
+ 
 
 
 			<plugin>
