--- a/deployer/pom.xml
+++ b/deployer/pom.xml
@@ -9,7 +9,6 @@
 	<description>Deploys the EU-DEVFIN app</description>
 
 	<properties>
-		<jetty.version>9.2.1.v20140609</jetty.version>
 		<eudevfin.version>1.1.0</eudevfin.version>
 	</properties>
 
@@ -37,54 +36,43 @@
 									<overWrite>true</overWrite>
 									<outputDirectory>/var/lib/tomcat7/webapps/ROOT/</outputDirectory>
 								</artifactItem>
+								<artifactItem>
+									<groupId>org.devgateway.eudevfin.translations</groupId>
+									<artifactId>local</artifactId>
+									<version>0.0.1</version>
+									<type>jar</type>
+									<overWrite>true</overWrite>
+									<outputDirectory>/var/lib/tomcat7/webapps/ROOT/</outputDirectory>
+								</artifactItem>
+								
 							</artifactItems>
 							<includes>**/*</includes>
+						</configuration>
+					</execution>
+
+
+					<execution>
+						<id>copy-installed</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>org.devgateway.eudevfin</groupId>
+									<artifactId>dim</artifactId>
+									<version>${eudevfin.version}</version>
+									<type>war</type>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>some-other-place</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
 			</plugin>
 
 
-	<plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-dependency-plugin</artifactId>
-		<version>2.8</version>
-		<executions>
-			<execution>
-				<id>copy-installed</id>
-				<phase>install</phase>
-				<goals>
-					<goal>copy</goal>
-				</goals>
-				<configuration>
-					<artifactItems>
-						<artifactItem>
-							<groupId>org.devgateway.eudevfin</groupId>
-							<artifactId>dim</artifactId>
-							<version>${eudevfin.version}</version>
-							<type>war</type>
-						</artifactItem>
-					</artifactItems>
-					<outputDirectory>some-other-place</outputDirectory>
-				</configuration>
-			</execution>
-		</executions>
-	</plugin>
- 
-
-
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<version>${jetty.version}</version>
-				<configuration>
-					<war>${basedir}/target/war</war>
-					<waitForChild>false</waitForChild>
-					<webApp>
-						<contextPath>/</contextPath>
-					</webApp>
-				</configuration>
-			</plugin>
 		</plugins>
 
 	</build>
@@ -106,12 +94,12 @@
 	</repositories>
 
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>EU-DEVFIN Central</id>
-            <name>DG EU-DEVFIN Central Repo</name>
-            <url>http://artifactory.ampdev.net/artifactory/eudevfin/</url>
-        </pluginRepository>
-    </pluginRepositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>EU-DEVFIN Central</id>
+			<name>DG EU-DEVFIN Central Repo</name>
+			<url>http://artifactory.ampdev.net/artifactory/eudevfin/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 </project>
