--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -34,10 +34,34 @@
 		</dependency>
 	</dependencies>
 	<build>
+	<plugins>
+	
+		<plugin>
+		<artifactId>maven-assembly-plugin</artifactId>
+		<version>2.4</version>
+		<configuration>
+			<descriptor>assembly-metadata.xml</descriptor>
+			<finalName>import-metadata-${project.version}</finalName>
+		</configuration>
+		<executions>
+			<execution>
+				<id>create-metadata</id>
+				<phase>package</phase>
+				<goals>
+					<goal>single</goal>
+				</goals>
+			</execution>
+		</executions>
+	</plugin>
+	
+	</plugins>
 		<resources>
 			<resource>
-				<filtering>false</filtering>
+				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
+				<excludes>
+				<exclude>**/*.xls</exclude>
+				</excludes>
 			</resource>
 		</resources>
 	</build>
