--- a/deployer/pom.xml
+++ b/deployer/pom.xml
@@ -10,6 +10,7 @@
 
 <properties>
     <eudevfin.output.dir>/var/lib/tomcat7/webapps/ROOT/</eudevfin.output.dir>
+    <eudevfin.extras.dir>/home/eudevfin/extras</eudevfin.extras.dir>
 </properties>
 
 <profiles>
@@ -20,7 +21,6 @@
 	<build>
 	    <plugins>
 	<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-clean-plugin</artifactId>
             <version>2.5</version>
             <configuration>
@@ -93,8 +93,9 @@
 				<artifactItems>
 				    <artifactItem>
 					<groupId>org.devgateway.eudevfin</groupId>
-					<artifactId>translation</artifactId>
+					<artifactId>dim</artifactId>
 					<version>${eudevfin.translation.version}</version>
+					<classifier>translation</classifier>
 					<type>jar</type>
 					<overWrite>true</overWrite>
 					<outputDirectory>${eudevfin.output.dir}</outputDirectory>
@@ -113,9 +114,11 @@
 	</build>
 
     </profile>
-<profile>
 
-	<id>install-metadata</id>
+
+    <profile>
+
+	<id>copy-translation</id>
 
 	<build>
 	    <plugins>
@@ -126,20 +129,138 @@
 		    <version>2.8</version>
 		    <executions>
 			<execution>
-			    <id>unpack jar and configuration</id>
+			    <id>copy-translations-to-extras</id>
 			    <phase>install</phase>
 			    <goals>
-				<goal>unpack</goal>
+				<goal>copy</goal>
 			    </goals>
 			    <configuration>
 				<artifactItems>
 				    <artifactItem>
 					<groupId>org.devgateway.eudevfin</groupId>
-					<artifactId>metadata</artifactId>
-					<version>${eudevfin.metadata.version}</version>
+					<artifactId>dim</artifactId>
+					<version>${eudevfin.translation.version}</version>
+					<classifier>translation</classifier>
 					<type>jar</type>
 					<overWrite>true</overWrite>
-					<outputDirectory>${eudevfin.output.dir}</outputDirectory>
+					<outputDirectory>${eudevfin.extras.dir}</outputDirectory>
+				    </artifactItem>
+
+				</artifactItems>
+				<includes>**/*</includes>
+			    </configuration>
+			</execution>
+
+		    </executions>
+		</plugin>
+
+	    </plugins>
+
+	</build>
+
+    </profile>
+
+    <profile>
+
+	<id>copy-metadata</id>
+
+	<build>
+	    <plugins>
+
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <version>2.8</version>
+		    <executions>
+			<execution>
+			    <id>copy-metadata-to-extras</id>
+			    <phase>install</phase>
+			    <goals>
+				<goal>copy</goal>
+			    </goals>
+			    <configuration>
+				<artifactItems>
+				    <artifactItem>
+					<groupId>org.devgateway.eudevfin</groupId>
+					<artifactId>import-metadata</artifactId>
+					<version>${eudevfin.metadata.version}</version>
+					<classifier>excel</classifier>
+					<type>jar</type>
+					<overWrite>true</overWrite>
+					<outputDirectory>${eudevfin.extras.dir}</outputDirectory>
+				    </artifactItem>
+
+				</artifactItems>
+				<includes>**/*</includes>
+			    </configuration>
+			</execution>
+
+		    </executions>
+		</plugin>
+
+	    </plugins>
+
+	</build>
+
+    </profile>
+
+
+
+<profile>
+
+	<id>install-metadata</id>
+
+	<build>
+	    <plugins>
+
+
+	<plugin>
+            <artifactId>maven-clean-plugin</artifactId>
+            <version>2.5</version>
+	    <executions>
+		<execution>
+		    <id>clean-metadata</id>
+		    <phase>install</phase>
+		<goals>
+		    <goal>clean</goal>
+		</goals>
+		</execution>
+	    </executions>
+            <configuration>
+                <filesets>
+                    <fileset>
+                        <directory>${eudevfin.output.dir}/WEB-INF/lib</directory>
+                        <includes>
+                            <include>import-metadata*excel.jar</include>
+                        </includes>
+                        <followSymlinks>false</followSymlinks>
+                    </fileset>
+                </filesets>
+            </configuration>
+        </plugin>
+
+
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <version>2.8</version>
+		    <executions>
+			<execution>
+			    <id>install-metadata</id>
+			    <phase>install</phase>
+			    <goals>
+				<goal>copy</goal>
+			    </goals>
+			    <configuration>
+				<artifactItems>
+				    <artifactItem>
+					<groupId>org.devgateway.eudevfin</groupId>
+					<artifactId>import-metadata</artifactId>
+					<version>${eudevfin.metadata.version}</version>
+					<classifier>excel</classifier>
+					<type>jar</type>
+					<overWrite>true</overWrite>
+					<outputDirectory>${eudevfin.output.dir}/WEB-INF/lib</outputDirectory>
 				    </artifactItem>
 
 				</artifactItems>
