--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -60,7 +60,7 @@
 	</plugin>
 	
 	</plugins>
-		<!--<resources>
+		<resources>
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
@@ -68,7 +68,7 @@
 				<exclude>**/*.xls</exclude>
 				</excludes>
 			</resource>
-		</resources> -->
+		</resources>
 	</build>
 
 </project>
