--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -54,6 +54,12 @@
     <dependencies>
 
 
+	 	<dependency>
+	        <groupId>org.springframework.security.extensions</groupId>
+	        <artifactId>spring-security-saml2-core</artifactId>
+	        <version>1.0.0.RELEASE</version>
+	    </dependency>
+
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
