--- a/eudevfin/common-ui/pom.xml
+++ b/eudevfin/common-ui/pom.xml
@@ -26,6 +26,12 @@
             <groupId>pentaho</groupId>
             <artifactId>mondrian</artifactId>
             <version>3.6.0</version>
+            <exclusions>
+        		<exclusion>
+        			<artifactId>xalan</artifactId>
+        			<groupId>xalan</groupId>
+        		</exclusion>
+        	</exclusions>
         </dependency>
 
         <dependency>
@@ -34,5 +40,18 @@
             <version>13.09.10</version>
         </dependency>
 
+
+        <dependency>
+        	<groupId>org.springframework.security.extensions</groupId>
+        	<artifactId>spring-security-saml2-core</artifactId>
+        	<version>1.0.0.RELEASE</version>
+        	<exclusions>
+        		<exclusion>
+        			<artifactId>xalan</artifactId>
+        			<groupId>xalan</groupId>
+        		</exclusion>
+        	</exclusions>
+        </dependency>
+        
     </dependencies>
 </project>
