--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.devgateway.eudevfin</groupId>
     <artifactId>eudevfin</artifactId>
-    <version>1.3.1</version>
+   <version>1.3.2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>EU-DEVFIN Parent Package</name>
     <url>http://www.springframework.org</url>
@@ -373,7 +373,7 @@
 				<artifactId>maven-release-plugin</artifactId>
 				<version>2.5.1</version>
 				 <configuration>
-          			<tagNameFormat>@{project.version}</tagNameFormat>
+          			<tagNameFormat>eudevfin-@{project.version}</tagNameFormat>
         		</configuration>
 			</plugin>
 
