--- a/eudevfin/pom.xml
+++ b/eudevfin/pom.xml
@@ -561,7 +561,7 @@
         </developerConnection>
         <connection>git@github.com:devgateway/eudevfin.git
         </connection>
-        <tag>1.3.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
 </project>
