--- a/eudevfin/saiku-webapp/pom.xml
+++ b/eudevfin/saiku-webapp/pom.xml
@@ -25,11 +25,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <!-- 
                 <configuration>
-                    <webXml>src\main\web\web.xml</webXml>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<recompressZippedFiles>false</recompressZippedFiles>
                 </configuration>
-                 -->
             </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -142,24 +141,7 @@
                     <configuration>
                         <lifecycleMappingMetadata>
                             <pluginExecutions>
-
-                                <pluginExecution>
-                                    <pluginExecutionFilter>
-                                        <groupId>org.apache.maven.plugins</groupId>
-                                        <artifactId>maven-war-plugin</artifactId>
-                                        <versionRange>[2.4,)</versionRange>
-                                        <goals>
-                                            <goal>war</goal>
-                                        </goals>
-                                    </pluginExecutionFilter>
-                                    <action>
-                                        <configurator>
-                                            <id>org.sonatype.m2e.webby.projectConfigurator</id>
-                                        </configurator>
-                                    </action>
-                                </pluginExecution>
-
-
+                             
                                 <pluginExecution>
                                     <pluginExecutionFilter>
                                         <groupId>
