--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -41,6 +41,17 @@
 	<build>
 	<plugins>
 	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>xls</nonFilteredFileExtension>						
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
+	
 		<plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
 		<version>2.6</version>
@@ -96,9 +107,12 @@
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
-				<excludes>
-				<exclude>**/*.xls</exclude>
-				</excludes>
+				<includes>
+				<include>**/*.xls</include>
+				<include>**/*.xml</include>
+				<include>**/*.html</include>
+				<include>**/*.properties.xml</include>
+				</includes>
 			</resource>
 		</resources>
 	
