--- a/eudevfin/financial/pom.xml
+++ b/eudevfin/financial/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.devgateway.eudevfin</groupId>
 		<artifactId>eudevfin</artifactId>
-		<version>1.3.3</version>
+		<version>1.4.5-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
