--- a/eudevfin/import-metadata/pom.xml
+++ b/eudevfin/import-metadata/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.devgateway.eudevfin</groupId>
 		<artifactId>eudevfin</artifactId>
-		<version>1.3.3</version>
+		<version>1.4.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>import-metadata</artifactId>
 	<name>EU-DEVFIN Importing Of Metadata</name>
@@ -41,9 +41,20 @@
 	<build>
 	<plugins>
 	
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.7</version>
+				<configuration>
+					<nonFilteredFileExtensions>
+						<nonFilteredFileExtension>xls</nonFilteredFileExtension>
+					</nonFilteredFileExtensions>
+				</configuration>
+			</plugin>
+
 		<plugin>
 		<artifactId>maven-assembly-plugin</artifactId>
-		<version>2.4</version>
+		<version>2.6</version>
 		<configuration>
 			<descriptor>assembly-metadata.xml</descriptor>
 			<finalName>import-metadata-${project.version}</finalName>
@@ -60,14 +71,48 @@
 	</plugin>
 	
 	</plugins>
-	
+
+	<pluginManagement>
+		<plugins>
+			<plugin>
+				<groupId>org.eclipse.m2e</groupId>
+				<artifactId>lifecycle-mapping</artifactId>
+				<version>1.0.0</version>
+				<configuration>
+					<lifecycleMappingMetadata>
+						<pluginExecutions>
+							<pluginExecution>
+								<pluginExecutionFilter>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-assembly-plugin</artifactId>
+									<versionRange>[2.0,)</versionRange>
+									<goals>
+										<goal>single</goal>
+									</goals>
+								</pluginExecutionFilter>
+								<action>
+									<execute>
+										<runOnIncremental>true</runOnIncremental>
+									</execute>
+								</action>
+							</pluginExecution>
+						</pluginExecutions>
+					</lifecycleMappingMetadata>
+				</configuration>
+			</plugin>
+		</plugins>
+	</pluginManagement>
+
 		<resources>
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
-				<excludes>
-				<exclude>**/*.xls</exclude>
-				</excludes>
+				<includes>
+				<include>**/*.xls</include>
+				<include>**/*.xml</include>
+				<include>**/*.html</include>
+				<include>**/*.properties.xml</include>
+				</includes>
 			</resource>
 		</resources>
 	
