--- a/eudevfin/saiku-webapp/pom.xml
+++ b/eudevfin/saiku-webapp/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<groupId>org.devgateway.eudevfin</groupId>
 		<artifactId>eudevfin</artifactId>
-       <version>1.3.3</version>
+       <version>1.4.5-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.saiku</groupId>
@@ -25,11 +25,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <!-- 
                 <configuration>
-                    <webXml>src\main\web\web.xml</webXml>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<recompressZippedFiles>false</recompressZippedFiles>
                 </configuration>
-                 -->
             </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
